--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 </head>
 <body>
 <div class="container mt-3">
+	<div class="card">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Banner-calculadora-1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7804727886493881"
+     data-ad-slot="9412176504"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+	</div>
 	<div class="card calculadora-contenedor mx-auto d-block fondo-naranja" style="border-radius: 20px; margin-top: 40px">
 		<a href="http://www.recargaenlinea.com.ve/"><img class="card-img-top logo-recarga" src="imagenes/logo-recarga-en-linea.png" alt="Card image"></a>
 	  <div class="card-body">
