--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<a href="http://www.recargaenlinea.com.ve/"><img class="card-img-top logo-recarga" src="imagenes/logo-recarga-en-linea.png" alt="Card image"></a>
 	  <div class="card-body">
 
-	  		<h5 class="card-title  text-center etiqueta" style="padding-bottom: 20px;">Calculadora para la reconversión monetaria</h5>
+	  		<h1 class="card-title  text-center etiqueta" style="padding-bottom: 20px;">Calculadora Bolivar Fuerte a Bolivar Soberano</h1>
 			<p>
 			  <h6 class="card-title  text-center etiqueta">Bolivar Fuerte </h6>
 			  <div class="input-group input-group-lg">
