--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </script>
 
 	</div>
+	<div class="col-md-12">
+		<p>Esta aplicación te permite convertir Bolívares Fuertes a Bolívares Soberanos sencillamente.</p>
+	</div>
 	<div class="card calculadora-contenedor mx-auto d-block fondo-naranja" style="border-radius: 20px; margin-top: 40px">
 		<a href="http://www.recargaenlinea.com.ve/"><img class="card-img-top logo-recarga" src="imagenes/logo-recarga-en-linea.png" alt="Card image"></a>
 	  <div class="card-body">
