--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/calculadora.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-
+	<meta name="google-site-verification" content="T-fM3aeaA2qfFosa2YXCVL1ztiBoGbz9ZMEs0MR9cgw" />
 </head>
 <body>
 <div class="container mt-3">
@@ -34,7 +34,8 @@
 
 	</div>
 	<div class="col-md-12">
-		<p>Esta aplicación te permite convertir Bolívares Fuertes a Bolívares Soberanos sencillamente.</p>
+		<p style="margin-top:3em;text-align:center">Esta aplicación te permite convertir Bolívares Fuertes a Bolívares Soberanos sencillamente.</p>
+		<p>El Bolívar Soberano es la nueva moneda venezolana</p>
 	</div>
 	<div class="card calculadora-contenedor mx-auto d-block fondo-naranja" style="border-radius: 20px; margin-top: 40px">
 		<a href="http://www.recargaenlinea.com.ve/"><img class="card-img-top logo-recarga" src="imagenes/logo-recarga-en-linea.png" alt="Card image"></a>
