--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Convertidor de bolivares fuertes a bolivares soberanos</title>
-	<meta name="Description" content="Esta aplicación web es un vonvertidor de bolivares fuertes a bolivares soberanos muy fácil de usar" />
+	<meta name="Description" content="Esta aplicación web es un convertidor de bolivares fuertes a bolivares soberanos muy fácil de usar" />
 <meta name="Keywords" content="calculadora bolivar fuerte bolivar soberano, bolivar soberano, convertidor bolivar soberano, calculadora bolívar soberano" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
